<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_ground_leaves"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="222dp"
        android:layout_height="226dp"
        android:src="@drawable/tree_with_leaves"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.766"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_main_menu" />

    <TextView
        android:id="@+id/txt_main_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:fontFamily="cursive"
        android:padding="8dp"
        android:text="@string/main_menu"
        android:textColor="@color/colorBlack"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_move_to_game"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"

        android:background="@drawable/button_background"
        android:fontFamily="cursive"
        android:text="@string/play_game"
        android:textAllCaps="false"

        android:textColor="@color/colorBlack"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_main_menu"
        app:layout_constraintVertical_bias=".2" />

    <Button
        android:id="@+id/btn_move_to_options"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_background"
        android:fontFamily="cursive"
        android:text="@string/options"
        android:textAllCaps="false"
        android:textColor="@color/colorBlack"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_move_to_game"
        app:layout_constraintStart_toStartOf="@+id/btn_move_to_game"
        app:layout_constraintTop_toBottomOf="@id/btn_move_to_game" />

    <Button
        android:id="@+id/btn_move_to_help"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"

        android:background="@drawable/button_background"
        android:fontFamily="cursive"
        android:text="@string/help_title"
        android:textAllCaps="false"

        android:textColor="@color/colorBlack"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_move_to_options"
        app:layout_constraintStart_toStartOf="@+id/btn_move_to_options"
        app:layout_constraintTop_toBottomOf="@id/btn_move_to_options" />

</android.support.constraint.ConstraintLayout>