<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/leaves_on_the_side"
    tools:context=".WelcomeActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="343dp"
        android:layout_height="371dp"
        android:src="@drawable/tubes_halloween"
        app:layout_constraintBottom_toTopOf="@+id/btn_move_to_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameName" />


    <ImageView
        android:id="@+id/img_2leaves_1"
        android:layout_width="74dp"
        android:layout_height="74dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/two_leaves"
        app:layout_constraintBottom_toTopOf="@+id/authorsName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameName"
        app:layout_constraintVertical_bias="0.4" />

    <ImageView
        android:id="@+id/img_2leaves_2"
        android:layout_width="74dp"
        android:layout_height="74dp"
        android:src="@drawable/two_leaves"
        app:layout_constraintBottom_toTopOf="@+id/btn_move_to_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.828"
        app:layout_constraintStart_toEndOf="@+id/img_2leaves_1"
        app:layout_constraintTop_toBottomOf="@+id/gameName"
        app:layout_constraintVertical_bias="0.049" />

    <Button
        android:id="@+id/btn_move_to_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/move_to_main_screen"
        android:textColor="@color/colorBlack"
        android:background="@drawable/button_background"
        android:fontFamily="cursive"
        android:textAllCaps="false"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/gameName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="cursive"
        android:text="@string/harvest_pumpkin_picker"
        android:textColor="@color/orange"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/authorsName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="cursive"
        android:text="@string/by_danica_walton_kimia_naghavi"
        android:textColor="@color/darkBrown"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>